--- a/src/app/features/offerbook/offer/actual-request/actual-request.component.scss
+++ b/src/app/features/offerbook/offer/actual-request/actual-request.component.scss
@@ -79,5 +79,10 @@
         flex: 1 1 80%;
         padding: .5rem;
     }
-
+}
+.accepted{
+    background-color: rgb(126, 212, 126);
+}
+.rejected{
+    background-color: rgb(236, 134, 143);
 }
