--- a/src/app/features/offerbook/request/offer-item/offer-item.component.html
+++ b/src/app/features/offerbook/request/offer-item/offer-item.component.html
@@ -9,7 +9,7 @@
     <div class="currentoffer__head flexbox">
         <span class="currentoffer__title">{{currentOffer.title}}</span>
         <p class="currentoffer__category">{{currentOffer.category}}</p>
-        <p>{{currentOffer.description}}</p>
+        <p *ngIf = "currentOffer.secondHand">б/у</p>
     </div>
     <div class="currentoffer__describe flexbox">
         
@@ -19,9 +19,7 @@
         <p>{{currentOffer.fromUserName ? currentOffer.fromUserName : 'нет имени'}}</p>
         <p>{{(currentOffer.fromUserRating)  ? currentOffer.fromUserRating : 'нет оценок'}}</p>
     </div>
-    <div class="currentoffer__other-offers">
-        <div *ngIf = "currentOffer.secondHand">б/у</div>
-    </div>
+ 
     <!-- <div class="request__remove">
         <button 
             mat-raised-button
