feat: added hello page with city chose and button when requests is empty

--- a/src/app/features/offerbook/request/button-wrap/button-wrap.component.html
+++ b/src/app/features/offerbook/request/button-wrap/button-wrap.component.html
@@ -1,1 +1,1 @@
-<button mat-raised-button (click)="openDialog()">Создать запрос</button>
+<button mat-raised-button (click)="openDialog()"><ng-content></ng-content></button>
