--- a/src/app/features/offerbook/request/request.component.scss
+++ b/src/app/features/offerbook/request/request.component.scss
@@ -13,3 +13,8 @@
     padding-bottom: 1.5rem;
 
 }
+.first-request-button{
+    display: flex;
+    justify-content: center;
+    padding-top: 15vh;
+}
