--- a/src/app/features/offerbook/request/offer-list/offer-list.component.html
+++ b/src/app/features/offerbook/request/offer-list/offer-list.component.html
@@ -1,4 +1,4 @@
-<button mat-button routerLink="/myrequests">назад</button>
+<button mat-button routerLink="/myrequests"><mat-icon>keyboard_backspace</mat-icon> назад</button>
 
 <h1>Все предложения</h1>
 
