--- a/src/app/features/offerbook/request/request-item/request-item.component.scss
+++ b/src/app/features/offerbook/request/request-item/request-item.component.scss
@@ -5,11 +5,8 @@
 .request-card {
     max-width: 14rem;
 
-
-
     &__image {
-      object-fit: contain; /*this makes de image in src fit to the size of specified below*/
-      //width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
+      object-fit: contain; 
       height: 14rem;
     }
     &__describe{
