--- a/src/app/features/offerbook/offer/actual-request/actual-request.component.scss
+++ b/src/app/features/offerbook/offer/actual-request/actual-request.component.scss
@@ -19,10 +19,11 @@
     
     &__photo{
         flex: 1 1 20%;
-        object-fit: contain; /*this makes de image in src fit to the size of specified below*/
-        //width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
+        object-fit: contain; 
         max-height: 6rem;
         max-width: 6rem;
+        
+        cursor: pointer;
     }    
     &__describe{
         flex: 1 1 25%;
