--- a/src/app/features/offerbook/request/offer-item/offer-item.component.scss
+++ b/src/app/features/offerbook/request/offer-item/offer-item.component.scss
@@ -16,10 +16,10 @@
     
     &__photo{
         flex: 1 1 20%;
-        object-fit: contain; /*this makes de image in src fit to the size of specified below*/
-        //width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
+        object-fit: contain; 
         max-height: 6rem;
         max-width: 6rem;
+        cursor: pointer;
     }  
     &__head{
         flex: 1 1 10%;
