feat: paginator added to Offer component; fix: fixed progress bar in Offer after reload page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,9 +22,7 @@
     <mat-error *ngIf="userDataFacade.logOutError | async as logOutError">{{logOutError}}</mat-error>
   </div>
 </header>
-<mat-progress-bar mode="query" *ngIf="userIsLoading | async"></mat-progress-bar>
-<mat-progress-bar mode="query" *ngIf="requestIsLoading | async"></mat-progress-bar>
-<mat-progress-bar mode="query" *ngIf="offerIsLoading | async"></mat-progress-bar>
+<mat-progress-bar mode="query" *ngIf="(userIsLoading | async) || (requestIsLoading | async) || (offerIsLoading | async) "></mat-progress-bar>
 
 <router-outlet></router-outlet>
 </main>  
