--- a/src/app/features/components/photo-popup/photo-popup.component.scss
+++ b/src/app/features/components/photo-popup/photo-popup.component.scss
@@ -1,11 +1,11 @@
 .photo{
-    max-height: 90vh;
+    max-height: 80vh;
     max-width: 90vw;
 
     &__image{
         object-fit: contain;
-        width: 95%;
-        height: 95%;
+        max-width: 100%;
+        max-height: 75vh;
     }
 }
 
