--- a/src/app/features/offerbook/offer/actual-request/actual-request.component.html
+++ b/src/app/features/offerbook/offer/actual-request/actual-request.component.html
@@ -23,7 +23,7 @@
         Предложений: {{!offerListForCounter.length ? 'ещё нет' : offerListForCounter.length }}
         {{bestPrice ? bestPrice : ''}}
     </div>
-    <div class="request__remove" *ngIf="!offerToRequest">
+    <div class="request__remove" *ngIf="!offerToRequest && !isRequestRejected">
         <button 
             mat-raised-button
             title="Дважды кликнуть, чтобы убрать из списка"
@@ -45,13 +45,13 @@
             mat-raised-button
             title="Сделать предложение"
             (click)="openDialog()"
-            *ngIf="!offerToRequest">
+            *ngIf="!offerToRequest && !isRequestRejected">
             Откликнуться
         </button>
         <button 
             mat-button
             title="Сделать предложение"
-            *ngIf="offerToRequest && request.status===requestStatusEnum[0]"
+            *ngIf="offerToRequest && request.status===requestStatusEnum[0] "
             disabled
             class="disabled">
             На рассмотрении
