--- a/src/app/features/offerbook/offer/actual-request/actual-request.component.scss
+++ b/src/app/features/offerbook/offer/actual-request/actual-request.component.scss
@@ -33,6 +33,10 @@
     &__category{
         font-style: italic;;
     }
+
+    &__secondhand{
+    font-weight: bold;    
+    }
     
     &__buyer{
     flex: 0 1 15%;
