--- a/src/app/features/offerbook/request/request-change-popup/request-change-popup.component.html
+++ b/src/app/features/offerbook/request/request-change-popup/request-change-popup.component.html
@@ -46,5 +46,10 @@
   </div>
   <div mat-dialog-actions>
     <button mat-button mat-dialog-close (click)="cancelChanging()">Отменить</button>
-    <button mat-raised-button mat-dialog-close type="submit" (click)="submitForm()">Принять</button>
+    <button mat-raised-button
+      mat-dialog-close
+      type="submit" 
+      (click)="submitForm()"
+      [class.disabled]="requestChangeForm.controls['requestImage'].invalid"
+      [disabled]="requestChangeForm.controls['requestImage'].invalid">Принять</button>
   </div>
