--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,10 @@
+@import "./ui/styles/variables.scss";
+
+
 $font-logo: 'Racing Sans One', cursive;
+:host{
+    font-size: 14px;
+}
 
 a{
     text-decoration: none;
@@ -9,24 +15,108 @@ a{
     margin:0 auto;
 
     .head{
+        position: sticky;
+        z-index: 10;
+
+        top: 0;
         display: flex;
         justify-content: space-between;
 
         padding: 2rem 0;
 
+        background-color: $header-background;
+
             &__logo{
+                // flex: 1 1 33%;
                 font-family: $font-logo;
                 font-weight: 500;
                 font-size: 1.5rem;
+                line-height: 35px;
+            }
+            &__logo-link{
+                line-height: 0;
+            }
+            &__menubutton{
+                // flex: 1 1 33%;
+
+                font-size: 1.1em;
             }
 
             &__photo{
-                width: 2rem;
-                height: 2rem;
+                width: 1.5em;
+                height: 1.5em;
             }
     }
     .isLoading{
         padding: .6rem 0;
         text-align: center;
+    }
+}
+
+@media screen and (max-width: breakpoint(desktop)) {
+    :host {
+        font-size: 120%;
+}
+}
+@media screen and (max-width: breakpoint(laptop)) {
+    :host {
+        font-size: 100%;
+}
+
+}
+@media screen and (max-width: breakpoint(tablet)) {
+    :host {
+        font-size: 90%;
+}
+    .container{
+        width: 96%;
+        .head{
+            &__logo{
+                line-height: 30px;
+            &__menubutton{
+                // flex: 1 1 33%;
+
+                font-size: 1.2em;
+            }
+            }
+        }
+    }
+    
+}
+@media screen and (max-width: breakpoint(tablet-portrait)) {
+    :host {
+        font-size: 90%;
+}
+    .head{
+        flex-wrap: wrap;
+        &__toggle {
+            // flex: 1 0 1;
+            // order: 1;
+        }
+        &__logo{
+        }
+    }
+}
+@media screen and (max-width: breakpoint(mobile)) {
+    :host {
+        font-size: 90%;
+}
+}
+@media screen and (max-width: breakpoint(mobile-portrait)) {
+    :host {
+        font-size: 90%;
+}
+    .container{
+        width: 96%;
+        .head{
+            &__logo{
+                line-height: 30px;
+            }
+            &__toggle {
+                flex: 1 0 1;
+                order: 1;
+            }   
+        
+        }
     }
 }
