--- a/src/app/features/offerbook/offer/offer-popup/offer-popup.component.html
+++ b/src/app/features/offerbook/offer/offer-popup/offer-popup.component.html
@@ -28,7 +28,7 @@
       <ngx-mat-file-input formControlName="offerImage"
         [accept]="'.png,.jpg,.jpeg'"
        placeholder="Выберите фото" ></ngx-mat-file-input>
-      <mat-icon matSuffix>folder</mat-icon>
+      <mat-icon matSuffix>add_a_photo</mat-icon>
       <mat-error *ngIf="offerForm.get('offerImage').hasError('maxContentSize')">
         Размер файла не должен превышать {{offerForm.get('requestImage')?.getError('maxContentSize').maxSize | byteFormat}}
          (Ваш файл {{offerForm.get('offerImage')?.getError('maxContentSize').actualSize
