--- a/src/app/features/offerbook/request/request-change-popup/request-change-popup.component.html
+++ b/src/app/features/offerbook/request/request-change-popup/request-change-popup.component.html
@@ -35,7 +35,7 @@
       <ngx-mat-file-input formControlName="requestImage"
         [accept]="'.png,.jpg,.jpeg'"
        placeholder="Выбрать другое фото" ></ngx-mat-file-input>
-      <mat-icon matSuffix>folder</mat-icon>
+      <mat-icon matSuffix>add_a_photo</mat-icon>
       <mat-error *ngIf="requestChangeForm.get('requestImage').hasError('maxContentSize')">
         Размер файла не должен превышать {{requestChangeForm.get('requestImage')?.getError('maxContentSize').maxSize | byteFormat}}
          (Ваш файл {{requestChangeForm.get('requestImage')?.getError('maxContentSize').actualSize
