--- a/src/app/features/user/login.component.scss
+++ b/src/app/features/user/login.component.scss
@@ -1,3 +1,5 @@
+@import "../../ui/styles/variables.scss";
+
 .login{
     display: flex;
     flex-direction: column;
@@ -14,6 +16,7 @@
     }
     &__register-refer{
         text-decoration: none;
+        color: $link;
     }
     .login-main{
         display: flex;
